# rabitcpp

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  REVISIONS.md  main.cpp  rabitConfig.h.in
Documentation/: Managed Complexity in Embedded Control Systems for UAVs.docx  Rabit Multitrhreaded Manager.docx  RabitBlockDiagrams.vsdx  RabitMultitrhreadedManagementSystem.docx
cmake/: README.md  utils.cmake
examples/: CMakeLists.txt  README.md
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/example5/: CMakeLists.txt  main.cpp
rabit/: CMakeLists.txt  Config.cmake.in
rabit/src/: RabitConfig.h  RabitReactor.cpp  RabitReactor.h
rabit/src/Manager/: RabitManager.cpp  RabitManager.h
rabit/src/Messaging/: ManagerControlMessage.cpp  ManagerControlMessage.h  ManagerStatusMessage.cpp  ManagerStatusMessage.h  PublishSubscribeMessage.cpp  PublishSubscribeMessage.h  PublishSubscribeMsgArray.cpp  PublishSubscribeMsgArray.h  RabitMessage.cpp  RabitMessage.h  RabitMessageQueue.h  RabitNonBlockingSPSCQueue.h  RabitWorkspace.cpp  RabitWorkspace.h  message_pool.cpp  message_pool.h
rabit/src/StateSystem/: ConstantStateNode.h  CounterStateNode.cpp  CounterStateNode.h  MasterStateNode.cpp  MasterStateNode.h  ParallelStateNode.cpp  ParallelStateNode.h  SerialStateNode.cpp  SerialStateNode.h  StateNode.h  TimerDelayStateNode.cpp  TimerDelayStateNode.h
rabit/src/Utilities/: Base64Conversions.cpp  Base64Conversions.h  ByteArrayReaderWriter.cpp  ByteArrayReaderWriter.h  CRC_Calculator.cpp  CRC_Calculator.h  GlobalPublishSubscribeException.h  ManagerStats.cpp  ManagerStats.h  MessageNotRegisteredException.h  RabitStopWatch.cpp  RabitStopWatch.h  SafeQueue.h  SystemTimeClock.cpp  SystemTimeClock.h
rbx_tools/: rabit_add_manager.cmake  rabit_add_messages.cmake  rabit_executable.cmake  rabit_main_gen.py  rabit_manager_workspace_gen.py  rabit_msg_gen.py  rabit_msg_helper.py  rabit_system_configuration.cmake
rbx_tools/Tools/: fastDDS.sh  tail_logs.py.in
rbx_tools/templates/: ws.cpp.em  ws.h.em
test/: CMakeLists.txt
test/integration1/: CMakeLists.txt  CMakeLists.txt.autosave  Manager0.h  Manager1.h  Manager2.h  Manager3.h  Message1.h  Message2.h  main.cpp
test/testmessaging/: CMakeLists.txt  testrabitSPSCQueue.cpp  testrabitSPSCQueue.h  testrabitmessage.cpp  testrabitmessage.h  testrabitmessagequeue.cpp  testrabitmessagequeue.h
test/testrabit/: CMakeLists.txt  testrabit.cpp  testrabit.h
test/testutils/: CMakeLists.txt  CMakeLists.txt.autosave  testsafequeue.cpp  testsafequeue.h
tests/: CMakeLists.txt
tests/test1/: CMakeLists.txt  main.cpp
